--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -303,7 +303,7 @@ The following attributes were found to have missing values\footnote{\texttt{awar
     appropriate context. For this reason, the feature was discarded.
     
     \item \texttt{runtimeMinutes}: this attribute has 4,852 missing values (29.5\%). Two imputation strategies were employed, both based on random sampling within the interquartile range. 
-    One strategy used the \texttt{titleType} feature to define the range, while the other imputed values using \texttt{canHaveEpisodes} and the \textit{Short} genre. 
+    One strategy used the \texttt{titleType} feature to define the range, while the other imputed values based off of the attribute's distribution alone. 
     The choice of which of the two strategies to use depends on the specific task, and will be specified in the corresponding sections.
     
     \item \texttt{awardWins}: this feature has 2618 \texttt{NaN} values (about 16\%).
@@ -355,38 +355,45 @@ Because of right-skewness (without a power-law distribution), other attributes w
 
 
 Regarding outliers, the feature that was found to be more problematic was \texttt{runtimeMinutes}.
-Figures~\ref{fig:outliers} report an analysis of the feature through the IQR method. Similarly to missing values imputation (~\ref{sec:missing_values}),
-outlier detection was performed using two different strategies.
-Figure~\ref{fig:runtimeMinutes_boxplot} shows the first approach, which computes outliers on each \texttt{titleType} separately.
-Figure ~\ref{fig:runtimeMinutes_boxplot_no_type} shows the second, which computes them based on \texttt{canHaveEpisodes} attribute and \textit{Short} genre.
-The boxplots show that there are samples that have been misreported, with runtimes of over 1000 minutes for \textit{tvSeries};
-the same can be observed on the second plot on the \textit{Has episodes} box plot.
-This might be because of an inconsistency with the understanding of the meaning of the attribute, and it might be possible that in those cases,
+Figure~\ref{fig:outliers} report an analysis of the feature through the IQR method.
+Similarly to missing values imputation (~\ref{sec:missing_values}),
+outlier detection was performed using two different strategies:
+% Figure~\ref{fig:runtimeMinutes_boxplot} shows the first approach, which computes outliers on each \texttt{titleType} separately.
+the first approach computes outliers on each \texttt{titleType} separately,
+while the second is based on the distribution of the \texttt{runtimeMinutes} attribute alone.
+% Figure ~\ref{fig:runtimeMinutes_boxplot_no_type} shows the second, which computes them based on \texttt{canHaveEpisodes} attribute and \textit{Short} genre.
+The boxplots show that there are samples that have been misreported, with runtimes of over 1000 minutes for \textit{tvSeries}.
+% the same can be observed on the second plot on the \textit{Has episodes} box plot.
+This might be because of an inconsistency with the understanding of the meaning of the attribute, and in those cases it might be possible that
 the value refers to the total runtime of the series, rather than the runtime of a single episode.\\
 
 
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{0.58\textwidth}
-        \includegraphics[width=\textwidth]{plots/outliers.png}
-        \captionsetup{width=0.9\linewidth, justification=centering}
+    % \begin{subfigure}{0.58\textwidth}
+        % \includegraphics[width=\textwidth]{plots/outliers.png}
+        \includegraphics[width=0.6\textwidth]{plots/outliers.png}
+        % \captionsetup{width=0.9\linewidth, justification=centering}
         \caption{Boxplot of the \texttt{runtimeMinutes} attribute for each \texttt{titleType}}
         \label{fig:runtimeMinutes_boxplot}
-    \end{subfigure}
-    \begin{subfigure}{0.4\textwidth}
-        \includegraphics[width=\textwidth]{plots/outliers_notype.png}
-        \captionsetup{width=0.9\linewidth, justification=centering}
-        \caption{Boxplot of the \texttt{runtimeMinutes} attribute without \texttt{titleType}}
-        \label{fig:runtimeMinutes_boxplot_no_type}
-    \end{subfigure}
+    % \end{subfigure}
+    % \begin{subfigure}{0.4\textwidth}
+    %     \includegraphics[width=\textwidth]{plots/outliers_notype.png}
+    %     \captionsetup{width=0.9\linewidth, justification=centering}
+    %     \caption{Boxplot of the \texttt{runtimeMinutes} attribute without \texttt{titleType}}
+    %     \label{fig:runtimeMinutes_boxplot_no_type}
+    % \end{subfigure}
     \captionsetup{justification=centering}
-    \caption{Outliers in the \texttt{runtimeMinutes} attribute}
+    % \caption{Outliers in the \texttt{runtimeMinutes} attribute}
     \label{fig:outliers}
 \end{figure}
 
 
 % Another interesting observation regards the presence of records with a runtime of 0 minutes for the \textit{short} type. This was present in just 1 record, and it was removed from the dataset because it was considered a mistake, although it was not considered an outlier.\\
-Another interesting observation regards the presence of a record with a runtime of 0 minutes for the \textit{short} type; although it was not considered an outlier by the first method, the record was removed from the dataset because it was regarded as a mistake.\\
+Another interesting observation regards the presence of a record with a runtime of 0 minutes for the \textit{short} type;
+% although it was not considered an outlier by the first method,
+the record was removed from the dataset because it was regarded as an erroneous sample.\\
 
-In this phase, outliers were not removed from the dataset, as it was decided to proceed on a case-by-case basis, depending on the task to be performed.\\
+In this phase, outliers were not removed from the dataset by default. Instead, a case-by-case approach was adopted,
+testing each task and analysis both with and without the outliers. Notably, in every case, better results were obtained when outliers were excluded.
